--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter_svg: ^2.0.4
   http: ^0.13.5
+  image_picker: ^0.8.7+1
 
 dev_dependencies:
   flutter_test:
