--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   flutter_svg: ^2.0.4
   http: ^0.13.5
   image_picker: ^0.8.7+1
+  shared_preferences: ^2.1.0
 
 dev_dependencies:
   flutter_test:
